website/src/css/custom.css
/* ... */
.card.large .button:hover {
  background: #fff;
  border-color: var(--color-white);
  color: var(--color-green-blue);
}

.card.large.dark .button:hover {
  background: var(--color-light-teal);
  border-color: var(--color-light-teal);
  color: var(--color-white);
}

.card.large.light .button,
.button.help:hover {
  background: var(--color-orange);
  border-color: var(--color-orange);
}

.card.large.light .button:hover {
  background: #de5d43;
  border-color: #de5d43;
  color: var(--color-white);
}

.card.large.light-blue .button {
  background: var(--color-light-blue);
  border-color: var(--color-light-blue);
  color: var(--color-primary-blue);
}

.card.large.light-blue .button:hover {
  background: #d9f6f4;
  border-color: #d9f6f4;
  color: var(--color-primary-blue);
}

.card .card__body {
  font-size: 1.125rem;
  line-height: 26px;
}

/* Pagination */
.pagination-nav {
  gap: 1em;
}

.pagination-nav__link {
  padding: var(--ifm-global-spacing) 0;
  transition: 100ms all ease-in-out;
  border: none;
}

.pagination-nav__item--next .pagination-nav__label::after {
  content:  var(--pagination-icon-next);
  font-weight: var(--ifm-font-weight-narrow);
  margin-left: .5em;
}

.pagination-nav__item:first-child .pagination-nav__label::before {
  content:  var(--pagination-icon-prev) ;
  font-weight: var(--ifm-font-weight-narrow);
  margin-right: .5em;
}

.pagination-nav__sublabel {
  font-weight: var(--ifm-font-weight-narrow);
  margin-bottom: 1em;
}

/* Font Sizing Adjustments */
.markdown > p,
.markdown li,
blockquote {
  font-size: clamp(.875rem, 1.5vw, 1.125rem);
  line-height: 1.5;
}
.pagination-nav__link {
  font-size: clamp(.875rem, 1.5vw, 1.25rem);
}
.title_src-components-file- {
  font-size: 0.813rem !important;
}
.markdown h1:first-child {
  font-size: clamp(var(--ifm-h1-font-size) * .9375, 1vw, var(--ifm-h1-font-size));
}

/* Docs */
.docImage_src-components-lightbox-,
.docImage_src-components-lightbox-styles-module,
.docImage_2V3X, .docImage_917O {
  max-width: 100%;
}

.generatedIndexPage_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocCategoryGeneratedIndexPage-styles-module .cardContainer_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocCard-styles-module, .generatedIndexPage_aEAk .card {
  color: var(--color-white);
  background: var(--ifm-footer-background-color);
}
.generatedIndexPage_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocCategoryGeneratedIndexPage-styles-module .cardContainer_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocCard-styles-module:hover, .generatedIndexPage_aEAk .card:hover {
  color: var(--color-white);
  background: var(--color-primary-blue);
}

/* Custom Blog Styles */
.blog-breadcrumbs {
  display: block;
  margin-bottom: 0;
  background: var(--color-off-white);
  padding: .5rem 0;
}

html[data-theme='dark'] .blog-breadcrumbs {
  background-color: transparent;
}

.blog-breadcrumbs a {
  margin-right: 1.5rem;
  position: relative;
}

.blog-breadcrumbs a[href="#"] {
  cursor: initial;
  pointer-events: none;
}

/* darkmode breadcrumbs */
html[data-theme='dark'] .blog-breadcrumbs a[href="#"],
html[data-theme='dark'] .blog-breadcrumbs a:not(:last-of-type):after {
  filter: brightness(2.5);
}

html[data-theme='dark'] .blog-breadcrumbs a:not(:last-of-type):after {
  filter: brightness(2.5);
  color: var(--ifm-link-color);
}

html[data-theme='dark'] .breadcrumbs__item--active .breadcrumbs__link {
  filter: brightness(1.5);
}

.blog-breadcrumbs a:not(:last-of-type):after {
  content: ">";
  color: var(--color-primary-blue);
  position: absolute;
  right: -15px;
  top: 0;
  bottom: 0;
  margin: auto 0;
  width: auto;
  font-size: .9rem;
  pointer-events: none;
}

.blog-main-row {
  margin: 0;
  justify-content: flex-start;
  flex-wrap: nowrap;
}

.blog-main-row .blog-aside {
  border-right: 1px solid var(--ifm-toc-border-color);
  margin-bottom: 2rem !important;
  width: 300px !important;
  flex: 1 0 300px;
  max-width: 300px;
}

.blog-main-row .blog-aside li a {
  font-size: 1rem;
  line-height: 1.25;
}

/* footer styles */
.footer {
  font-weight: var(--ifm-font-weight-narrow);
  font-size: 1.2rem;
  padding-top: var(--ifm-footer-padding-vertical);
  padding-bottom: var(--ifm-footer-padding-vertical);
}

.footer button {
  font-size: 1.125rem;
}

.footer a {
  color: var(--ifm-footer-color);
  text-decoration: none;
}

.footer a:hover {
  text-decoration: underline;
  color: var(--ifm-footer-color);
}

.footer__links {
  margin-bottom: 0;
}

.footer__link-item {
  color: var(--ifm-footer-color);
  display: flex;
  justify-content: space-between;
}

.footer__items {
  list-style: none;
  margin-bottom: 1em;
  padding-left: 0;
  gap: 1.5em;
  display: flex;
}

/* social media icons in footer */
.footer__items--right {
  display: flex;
  gap: 1.5em;
}

/* fontawesome icons in footer */
.footer .fa-brands {
  color: var(--color-footer-accent);
  font-size: 1.6rem;
  transition: all .3s ease-in-out;
}

.footer .fa-brands:hover {
filter: opacity(.75);
}

/* copyright */
.footer__bottom {
  text-align: left;
  color: var(--color-footer-accent);
  font-size: 1rem;
}

.footer__copyright {
  margin-top: .5em;
}

/* Begin @Media Queries */
@media (min-width: 997px) and (max-width: 1150px) {
  nav.navbar a.navbar__link {
    font-size: 0.875rem;
  }

  .navbar__search .navbar__search-input {
    max-width: 160px;
  }
}

@media (max-width: 910px) {
  .footer__items {
    flex-direction: column;
    align-items: flex-start;
  }
}

@media (max-width: 996px) {
  .navbar-sidebar__brand .navbarSidebarToggle_node_modules-\@docusaurus-theme-classic-lib-next-theme-Navbar-styles-module {
    margin-right: 0;
    margin-left: .25em;
  }

  .navbar-sidebar__brand > div:first-of-type {
    order: 1;
    margin-right: 0;
  }

  .footer__link-item {
    flex-direction: column;
  }

  .footer__copyright {
    margin-top: 1em;
  }
}
/* ... */

